# qmk_toolbox

./: .gitignore  .gitmodules  Flashing.cs  ISSUE_TEMPLATE.md  LICENSE.md  PULL_REQUEST_TEMPLATE.md  QMK Flasher.sln  mcu-list.txt  readme.md
linux/: FLASHING_GUIDE.md  HID_CONSOLE_SETUP.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  Makefile  QMKToolbox.sln  QMKToolbox.sln.DotSettings  README.md  activate.sh  install_hid_support.sh  main.c  main.glade  pyproject.toml  setup.py  test_flashing.py  test_hid.sh
linux/QMKToolbox/: App.axaml  App.axaml.cs  App.config  MessageType.cs  OpenDlgHelper.cs  Program.cs  QMKToolbox.csproj  Roots.xml  ViewLocator.cs  app.manifest  d.diff
linux/QMKToolbox/Helpers/: DriverInstaller.cs  EmbeddedResourceHelper.cs  LinuxPermissions.cs
linux/QMKToolbox/Properties/: Resources.Designer.cs  Resources.resx  Settings.Designer.cs  Settings.settings
linux/QMKToolbox/Resources/: avrdude  bootloadHID  dfu-programmer  dfu-util  hid_bootloader_cli  mdloader  wb32-dfu-updater_cli
linux/QMKToolbox/Usb/: KnownHidDevice.cs  UsbDeviceNameRecord.cs  UsbDeviceRecordComparer.cs  UsbDeviceRecordHelper.cs  UsbListener.cs
linux/QMKToolbox/Usb/Bootloader/: Apm32DfuDevice.cs  AtmelDfuDevice.cs  AtmelSamBaDevice.cs  (+15 more)
linux/QMKToolbox/ViewModels/: MainWindowViewModel.cs  ViewModelBase.cs
linux/QMKToolbox/Views/: IWindow.cs  MainWindow.axaml  MainWindow.axaml.cs
linux/packaging/: 99-qmk.rules
linux/packaging/appimage/: build.sh
linux/packaging/arch/: PKGBUILD
linux/packaging/deb/: build.sh
linux/resources/: qmk-toolbox.desktop
linux/src/qmk_toolbox/: __init__.py  main.py  message_type.py  window_state.py
linux/src/qmk_toolbox.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+322 files in other folders)
